[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-expers-scanner"
version = "0.1.0"
description = ""
authors = [{name = "Sequential Lab"}]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "chainlit==2.0.2",
    "pydantic-ai==0.0.18",
    "groq==0.15.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[tool.setuptools.packages.find]
where = ["src/doc-perplex"]
